4/10 cấu hình thêm tệp .env, sử dụng thư viện godotenv để đọc tep .env
